# LLM_article_analysis

./: Dockerfile  README.md  prompts.json  pyproject.toml
analytics/: app_init.py  config.py  custom_logging.py  errors.py  main.py
analytics/api/: analysis_router.py
analytics/middleware/: GZip_decompress.py  auth.py  cache_control.py  custom_logging.py  security_headers.py  server_header.py
analytics/service/: analysis_service.py  json_service.py  llm_service.py
analytics/utils/: analyze_articles.py  articles_service.py  excel_writer.py  transformer_service.py
tests/: conftest.py  test_analyse_endpoint.py  test_analyse_endpoint_with_dataset.py  test_analysis.py  test_analysis_geval.py  test_analytics_api.py  test_combination_prompt.py  test_llm.py  test_user_needs_reference.py
tests/assets/: eval_criteria.json  evaluation_dataset.json  example_api_upload.json
tests/results/: test_results_final.xlsx
