[project]
name = "analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Dain Studios Oy",email = "info@dainstudios.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.61.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "backend-shared @ file:../backend_shared",
    "tabula (>=1.0.5,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "google-genai (>=1.12.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
coverage = "^7.7.1"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ["docs", "scripts"]
respect-gitignore = true
target-version = "py312"

[tool.ruff.format]
docstring-code-line-length = 91

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-line-length = 91

[tool.coverage.report]
exclude_also = [
    "def __init__",
]

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "*/__init__.py",
    "analytics/app_init.py",
    "analytics/config.py",
    "analytics/custom_logging.py",
    "analytics/errors.py",
    "tests/*"
]

[tool.pytest]
[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
testpaths = ["tests"]
pythonpath = ["backend_analytics"]
markers = [
    "slow: slow tests, that test the functions thuroughly",
    "fast: quick tests, that test basic functionality",
    "api: tests that test the api",
    "geval: tests done with geval framework"
]
log_cli = true
log_cli_level = "INFO"
